--- a/Web.config
+++ b/Web.config
@@ -85,6 +85,6 @@
 
 	<connectionStrings>
 		<add name="Conn" providerName="System.Data.SqlClient"
-		connectionString="Data Source=DEIVIDILG\DEIVIDILG;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
+		connectionString="Data Source=Camila;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
 	</connectionStrings>
 </configuration>
