--- a/Pv_Final_Reservaciones.csproj
+++ b/Pv_Final_Reservaciones.csproj
@@ -269,6 +269,7 @@
     <Content Include="LinqToDB.Templates\CopyMe.SqlServer.tt.txt" />
     <Content Include="Pages\CrearHabitacion.aspx" />
     <Content Include="Pages\Detalles.aspx" />
+    <Content Include="Pages\EditarHabitacion.aspx" />
     <Content Include="Pages\GestionarReservaciones.aspx" />
     <Content Include="Pages\ListaHabitaciones.aspx" />
     <Content Include="Pages\Login.aspx" />
@@ -399,6 +400,13 @@
     </Compile>
     <Compile Include="Pages\Detalles.aspx.designer.cs">
       <DependentUpon>Detalles.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\EditarHabitacion.aspx.cs">
+      <DependentUpon>EditarHabitacion.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\EditarHabitacion.aspx.designer.cs">
+      <DependentUpon>EditarHabitacion.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\GestionarReservaciones.aspx.cs">
       <DependentUpon>GestionarReservaciones.aspx</DependentUpon>
