Cambios minimos de crearReservacion

--- a/Pv_Final_Reservaciones.csproj
+++ b/Pv_Final_Reservaciones.csproj
@@ -276,6 +276,7 @@
     <Content Include="Pages\Login.aspx" />
     <Content Include="Pages\Misreservaciones.aspx" />
     <Content Include="Pages\ModificarReservacion.aspx" />
+    <Content Include="Pages\Resultado.aspx" />
     <Content Include="Pages\ResultadoDeEditarReservacion.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -450,6 +451,13 @@
     </Compile>
     <Compile Include="Pages\ModificarReservacion.aspx.designer.cs">
       <DependentUpon>ModificarReservacion.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Resultado.aspx.cs">
+      <DependentUpon>Resultado.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Resultado.aspx.designer.cs">
+      <DependentUpon>Resultado.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\ResultadoDeEditarReservacion.aspx.cs">
       <DependentUpon>ResultadoDeEditarReservacion.aspx</DependentUpon>
